force-app/main/default/objects/Handover_Package__c/Handover_Package__c.object-meta.xml
<CustomObject>
    <description>O&amp;M handover packages per project, tracking scope, documentation, and client acceptance status.</description>
    <label>Handover Package</label>
    <nameField>
        <displayFormat>HP-{00000}</displayFormat>
        <label>Package Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Handover Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>