force-app/main/default/objects/Handover_Package__c/fields/Client_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Acceptance_Date__c</fullName>
    <label>Client Acceptance Date</label>
    <type>Date</type>
</CustomField>