force-app/main/default/objects/Handover_Package__c/fields/OM_Manual_URL__c.field-meta.xml
<CustomField>
    <fullName>OM_Manual_URL__c</fullName>
    <label>O&amp;M Manual URL</label>
    <type>Url</type>
</CustomField>