force-app/main/default/objects/Handover_Package__c/fields/Package_Code__c.field-meta.xml
<CustomField>
    <fullName>Package_Code__c</fullName>
    <label>Package Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>